fixed the os issues

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-       os: [ubuntu-latest, window-latest, macros-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: code checkout
