--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,12 @@
 name: CI
 
-on: push
+on: 
+  push:
+    branches:
+      - master 
+  pull_request:
+    
+
 
 jobs:
   linting:
@@ -9,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        version: ['3.9','3.10','3.11']
+        version: ['3.9','3.10']
 
     steps:
       - name: code checkout
