--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,8 @@ name: CI
 on: 
   push:
     branches:
-      - master 
+      - master
   pull_request:
-    
-
 
 jobs:
   linting:
@@ -15,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        version: ['3.9','3.10']
+        version: ['3.9', '3.10']
 
     steps:
       - name: code checkout
@@ -32,4 +30,23 @@ jobs:
           pip install flake8
 
       - name: run flake8
-        run: flake8 app.py
+        run: |
+          flake8 app.py
+
+  testing:
+    needs: linting
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: code checkout
+        uses: actions/checkout@v3
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: run unit test
+        run: |
+          python -m unittest discover
